# EdenSynth

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  EdenSynth.sln  README.md  eden_core.sln
EdenSynth/: CMakeLists.txt  CMakePresets.json  EdenSynth.jucer  TODO.md  conanfile.py  eden.sln
EdenSynth/Builds/VisualStudio2017/: EdenSynth.sln  EdenSynth_AAX.vcxproj  EdenSynth_AAX.vcxproj.filters  EdenSynth_SharedCode.vcxproj  EdenSynth_SharedCode.vcxproj.filters  EdenSynth_StandalonePlugin.vcxproj  EdenSynth_VST.vcxproj  EdenSynth_VST3.vcxproj  resources.rc
EdenSynth/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
EdenSynth/JuceLibraryCode/modules/juce_audio_processors/format_types/: juce_VSTInterface.h
EdenSynth/SharedCode/: CMakeLists.txt  EdenSynth_SharedCode.vcxproj  EdenSynth_SharedCode.vcxproj.filters
EdenSynth/SharedCode/include/: EdenAdapter.h  EdenFilterParameters.h  EdenWaveshapingParameters.h  EnvelopeComponent.h  EnvelopeSegmentComponent.h  ErrorDialogListener.h  FileHelper.h  FilterComponent.h  FilterControlsComponent.h  FilterEnvelopeComponent.h  FilterEnvelopeSegmentComponent.h  GeneralSettingsComponent.h  GeneratorComponent.h  ModifierComponent.h  OscillatorComponent.h  OscillatorContainer.h  OscillatorSourceComponent.h  OscillatorsComponent.h  OutputSettingsComponent.h  PluginEditor.h  PluginProcessor.h  PresetLoader.h  PresetLoadingResult.h  PresetManager.h  PresetSaver.h  PresetSavingResult.h  Presets.h  PresetsComponent.h  ProductionPresetManager.h  Visibility.h  WaveTablePathProvider.h  WaveshaperComponent.h  WaveshapingCanvas.h  WaveshapingTransferFunctionContainer.h
EdenSynth/SharedCode/include/viewmodels/: PresetsViewModel.h  ViewModel.h
EdenSynth/SharedCode/source/: EdenAdapter.cpp  EdenFilterParameters.cpp  EdenWaveshapingParameters.cpp  EnvelopeComponent.cpp  EnvelopeSegmentComponent.cpp  FileHelper.cpp  FilterComponent.cpp  FilterControlsComponent.cpp  FilterEnvelopeComponent.cpp  FilterEnvelopeSegmentComponent.cpp  GeneralSettingsComponent.cpp  GeneratorComponent.cpp  ModifierComponent.cpp  OscillatorComponent.cpp  OscillatorContainer.cpp  OscillatorSourceComponent.cpp  OscillatorsComponent.cpp  OutputSettingsComponent.cpp  PluginEditor.cpp  PluginProcessor.cpp  PresetLoader.cpp  PresetManager.cpp  PresetSaver.cpp  Presets.cpp  PresetsComponent.cpp  ProductionPresetManager.cpp  WaveTablePathProvider.cpp  WaveshaperComponent.cpp  WaveshapingCanvas.cpp  WaveshapingTransferFunctionContainer.cpp
EdenSynth/SharedCode/source/viewmodels/: PresetsViewModel.cpp
EdenSynth/SharedCode_test/: CMakeLists.txt
EdenSynth/SharedCode_test/source/: ProductionPresetManagerTest.cpp
EdenSynth/SharedCode_test/source/viewmodels_test/: PresetsViewModelTest.cpp
EdenSynth/Source/: EdenAdapter.cpp  EdenAdapter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SineWaveSound.h  SineWaveVoice.h  SynthAudioSource.h
EdenSynth/assets/presets/: 17_12_2020.xml  Default.xml  Digital China No Resonance.xml  Digital China.xml  ElectricalLeadAttempt.xml  Galaxy.xml  NoisePercussion.xml  ResoLead.xml
EdenSynth/dependencies/: dependencies.txt
EdenSynth/dependencies/libs/fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
EdenSynth/dependency_wrappers/juce/: conanfile.py
EdenSynth/libeden/: CMakeLists.txt  libeden.vcxproj  libeden.vcxproj.filters
EdenSynth/libeden/include/: AudioBuffer.h  EdenSynthesiser.h  MidiBuffer.h  MidiMessage.h
EdenSynth/libeden/include/eden/: AudioBuffer.h  EdenSynthesiser.h  EnvelopeParameters.h  FilterParameters.h  MidiBuffer.h  MidiMessage.h  Oscillator.h  OscillatorParameters.h  OscillatorSource.h  SampleType.h  WaveshapingFunctionGenerator.h
EdenSynth/libeden/include/eden_impl/: EdenSynthesiserImpl.h  OscillatorImpl.h  OscillatorSourceImpl.h  WaveshapingFunctionGeneratorImpl.h
EdenSynth/libeden/include/interpolation/: IInterpolator.h  LinearInterpolator.h
EdenSynth/libeden/include/settings/: EnvelopeSettings.h  GeneratorSettings.h  Settings.h  SubtractiveModuleSettings.h  Tuner.h  WaveshapingModuleSettings.h
EdenSynth/libeden/include/synth/: IMonoModule.h  Mixer.h  Synthesiser.h  Tuner.h  Voice.h
EdenSynth/libeden/include/synth/envelope/: ADBDR.h  ADSR.h  Attack.h  Decay.h  Envelope.h  (+12 more)
EdenSynth/libeden/include/utility/: EdenAssert.h  MathConstants.h  StopWatch.h  StopWatchPrinter.h  TimeSampleConverter.h  WaveFileReader.h
EdenSynth/libeden/source/eden/: AudioBuffer.cpp  EdenSynthesiser.cpp  MidiBuffer.cpp  MidiMessage.cpp  Oscillator.cpp  OscillatorSource.cpp  WaveshapingFunctionGenerator.cpp
EdenSynth/libeden/source/eden_impl/: EdenSynthesiserImpl.cpp  OscillatorImpl.cpp  OscillatorSourceImpl.cpp  WaveshapingFunctionGeneratorImpl.cpp
EdenSynth/libeden/source/interpolation/: LinearInterpolator.cpp
EdenSynth/libeden/source/settings/: EnvelopeSettings.cpp  GeneratorSettings.cpp  Settings.cpp  SubtractiveModuleSettings.cpp  Tuner.cpp  WaveshapingModuleSettings.cpp
EdenSynth/libeden/source/synth/: Mixer.cpp  Synthesiser.cpp  Tuner.cpp  Voice.cpp
EdenSynth/libeden/source/utility/: StopWatch.cpp  StopWatchPrinter.cpp  TimeSampleConverter.cpp  WaveFileReader.cpp
EdenSynth/libeden_test/: CMakeLists.txt  TestUtils.h  libeden_test.vcxproj  libeden_test.vcxproj.filters  pch.h
EdenSynth/libeden_test/eden_test/: AudioBufferTest.cpp  MidiBufferTest.cpp
EdenSynth/libeden_test/interpolation_test/: LinearInterpolatorTest.cpp
EdenSynth/libeden_test/synth_test/: SynthesiserTest.cpp  VoiceTest.cpp
EdenSynth/libeden_test/synth_test/envelope_test/: ADBDRTest.cpp  EnvelopeTest.cpp  SegmentsTest.cpp
EdenSynth/libeden_test/synth_test/wavetable_test/: SignalGeneratorTest.cpp  WhiteNoiseSourceTest.cpp
EdenSynth/libeden_test/utility_test/: TimeSampleConverterTest.cpp
EdenSynth/libeden_test/utility_test/dsp_test/: CorrelationTest.cpp
EdenSynth/wrappers/: EdenSynth_AAX.vcxproj  EdenSynth_AAX.vcxproj.filters  EdenSynth_VST3.vcxproj  EdenSynth_VST3.vcxproj.filters  resources.rc
(+85 files in other folders)
